--- a/starter/app/src/main/res/values/colors.xml
+++ b/starter/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="violate">#003D4B</color>
     <color name="purple">#9D5EFE</color>
 
+    <color name="cian">#007E7B</color>
+
 </resources>
