--- a/starter/app/src/main/res/layout/content_main.xml
+++ b/starter/app/src/main/res/layout/content_main.xml
@@ -42,21 +42,21 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/glide"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="48dp"
             android:text="@string/glide_image_loading_library_by_bumptech" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/loadApp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="48dp"
             android:text="@string/loadapp_current_repository_by_udacity" />
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/retrofit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="48dp"
