--- a/starter/app/src/main/res/xml/activity_detail_scene.xml
+++ b/starter/app/src/main/res/xml/activity_detail_scene.xml
@@ -6,9 +6,10 @@
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
+        motion:autoTransition="animateToEnd"
         motion:duration="1260">
-       <KeyFrameSet>
-       </KeyFrameSet>
+        <KeyFrameSet>
+        </KeyFrameSet>
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
