--- a/starter/app/src/main/res/layout/content_main.xml
+++ b/starter/app/src/main/res/layout/content_main.xml
@@ -10,6 +10,8 @@
     tools:showIn="@layout/activity_main">
 
     <com.udacity.LoadingButton
+        app:text="@string/download"
+        app:loadingText="@string/button_loading"
         android:id="@+id/custom_button"
         android:layout_width="371dp"
         android:layout_height="60dp"
